# wotcpp

./: CMakeLists.txt  README.md
Core/: CMakeLists.txt
Core/include/: WoT.h  WoTAction.h  WoTAdapter.h  WoTEvent.h  WoTInteractions.h  WoTProperty.h  WoTServient.h  WoTTd.h  WoTThing.h
Core/src/: WoT.cpp  WoTAction.cpp  WoTAdapter.cpp  WoTEvent.cpp  WoTProperty.cpp  WoTServient.cpp  WoTTd.cpp  WoTThing.cpp
Schema/: Schema.h
